--- a/dashboard/login.html
+++ b/dashboard/login.html
@@ -41,6 +41,12 @@
             </form>
         </div>
     </div>
+
+	<div class="floating-heart">
+		<i class="fas fa-heart"></i>
+		<div class="tooltip">Made with ❤️ By Science Gear</div>
+	  </div>
+	  
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
